Minor fix to overflow of import pathway button

--- a/app/frontend_web/www_modular/css/style3.css
+++ b/app/frontend_web/www_modular/css/style3.css
@@ -197,6 +197,7 @@ background-position:-2px -2px, -2px -2px, -1px -1px, -1px -1px
     text-align: right;
     background: white;
     max-width: 20px;
+    overflow: auto;
 }
 
 
